# purplemonkeydishwasher

./: .gitignore  Pirinen-2019-loresmt-karelian-workflow-beamer.tex  README.md  bio.markdown  cv.markdown  index.md  latexml.markdown  new-conference.bash
2008-masters-thesis/: Makefile  Pirinen-2008-masters-thesis.html  Pirinen-2008-masters-thesis.tex  gradu.bib
2009-d-spin-meeting/: clarin-d-spin.tex
2009-fsmnlp/: Makefile  Pirinen-2009-fsmnlp.html  Pirinen-2009-fsmnlp.markdown  Pirinen-fsmnlp-2009.tex
2009-nodalida/: Makefile  Pirinen-2009-nodalida.html  Pirinen-2009-nodalida.markdown  Pirinen-nodalida-2009.tex  muistiinpano-2009-05-14.rst
2009-sfcm/: Makefile  Pirinen-2009-sfcm.html  Pirinen-2009-sfcm.markdown  Pirinen-2009-sfcm.tex  Pirinen-sfcm-2009.tex  derivations.hlexc  exceptions.hlexc  inflection.hlexc  omorfi.xerox.twolc  sami.xerox.twolc
2010-cla/: Makefile  Pirinen-2010-cla.html  Pirinen-2010-cla.markdown  Pirinen-cla-2010.tex  test.eps
2010-investigationes-linguisticae/: Makefile  Pirinen-2010-il.html  Pirinen-2010-il.markdown  Pirinen-il-2010.tex
2011-cicling-contextspell/: Pirinen-2011-cicling-contextspell.html  Pirinen-2011-cicling-contextspell.markdown  Pirinen-2011-cicling-contextspell.tex  fiwiki.strings
2011-lrec-apertium/: Pirinen-2011-lrec-apertium.html  Pirinen-2011-lrec-apertium.markdown  Pirinen-2011-lrec-apertium.tex  lrec-2011-apertium-beamer.tex  lrec-2011-apertium.tex  lrec2011.bib
2011-nodalida/: Makefile  Pirinen-2011-nodalida-omorfi.html  Pirinen-2011-nodalida-omorfi.markdown  Pirinen-2011-nodalida-omorfi.tex  Pirinen-nodalida-2011-omorfi.tex  Pirinen-nodalida-2011-spellers.tex
2012-fsmnlp-speller/: Pirinen-2012-fsmnlp-speedspelling.html  Pirinen-2012-fsmnlp-speedspelling.markdown  anystar.dot  branching_data_from_att.py  cat.dot  catses.dot  cta2cat.dot  editdist.py  fsmnlp-2012-speedspelling.tex  fsmnlp-2012-spelling-tutorial.tex  tally_corrections.py  undhr.txt.fi
2013-fscons/: beamerthemeHY.sty  fscons-2013-beamer.tex
2014-abumatran-intro/: Makefile  abumatran-weighted-fst.tex  anystar.txt  edit1-ab10.txt  en-confusables.strings  en-orth.strings
2014-abumatran-workshop/: Makefile  abumatran-workshop.tex  lattice.dot
2014-cicling/: Makefile  Pirinen-2014-cicling-beamer.tex  Pirinen-2014-cicling.html  Pirinen-2014-cicling.markdown  Pirinen-2014-cicling.tex  README.md  catses.strings  cicling2014.bib  cta.strings  cta2cat.txt  edit1swap-ab10.txt  en-orth.strings  errm-ed1.txt
2014-lrec-omorfi/: 2014-lrec-omorfi.tex  Makefile  lrec2014.bib
2014-mtmarathon/: 2014-mtm-fin-eng.tex  Makefile.am  configure.ac  mtm2014.bib  mtm2014.pbs.in  omorfi-morphs.relabel  omorfi-segments.relabel  undhr.eng.text
2014-phd-dissertation/: Pirinen-2014-dissertation.tex  Pirinen-2014-phd-dissertation.html  arts.bib  cc-by-nc-nd-unported-3.tex  diss-seminar-2013-02-14.tex  diss-structure-uml-ish.dia  edit-weighted.dot  edit-weighted.tsv  invite.tex  unihelcompling.cls
2014-sky-omorfi/: 2015-sky-omorfi.tex  Makefile  Pirinen-2015-sky-omorfi.html  Pirinen-2015-sky-omorfi.markdown  Pirinen-2015-sky-omorfi.tex  combo.dia  omorfi-2013.tex  omorfi2013.bib  skyomorfi2015.bib
2015-cifu/: Makefile  Pirinen-2015-cifu-omorfi-beamer.tex
2015-fiwclul/: .2015-fiwclul-template.tex.swp  2015-fiwclul-business-meating-beamer.tex  2015-fiwclul-proceedings.tex  2015-fiwclul-template.tex  Makefile  fiwclul2015.bib  sigur-constitution.markdown
2015-naacl/: 2015-naacl-smt-morph-segments.tex  Makefile  naacl2015.bib
2015-nodalida/: 2015-nodalida-cg-reweight.tex  2015-nodalida-mt-comp.tex  2015-nodalida-omorfi-poster.tex  2015-nodalida-omorfi.tex  Makefile  Pirinen-2015-nodalida-cg-reweight-beamer.tex  Pirinen-2015-nodalida-cg-reweight.html  Pirinen-2015-nodalida-cg-reweight.markdown  Pirinen-2015-nodalida-cg-reweight.tex  abmtcolors.sty  beamerthemeAbumatran.sty  nodalida2015.bib
2015-tweetmt/: Makefile  Pirinen-2015-tweetmt.html  Pirinen-2015-tweetmt.markdown  Pirinen-2015-tweetmt.tex  paper_dcu_tweetmt15.bib
2015-why/: 2015-why-linguistics-in-smt.tex  Makefile  Pirinen-2015-why-linguistics-in-smt.tex  Tommi_Pirinen_why_linguistics_in_smt.txt  beamerthemeAbumatran.sty  why2015.bib
2015-wmt/: Makefile  Pirinen-2015-wmt.html  Pirinen-2015-wmt.markdown  Pirinen-2015-wmt.tex  abumatran_wmt15.bib  calculate-some-results.py  compare-line.bash  compares.tsv  results_abu_uu.csv  results_abu_uu.ods  results_uu_abu.csv  results_uu_abu.ods
2016-eerbmt/: Makefile  Pirinen-2016-eerbmt-sigur-beamer-boaster.tex  Pirinen-2016-eerbmt-sigur-beamer.tex  Pirinen-2016-eerbmt-sigur-poster.tex  Pirinen-2016-eerbmt-sigur.tex
2016-finclarin/: Makefile  Pirinen-2016-finclarin-inel-beamer.tex  Pirinen-2016-finclarin-sigur-beamer.tex
2016-finmt/: Makefile  Pirinen-2016-finmt-omorfi-beamer.tex  beamerthemeHZSK.sty
2016-iwclul/: 2016-iwclul-finnish-mt.tex  2016-sigur-meeting-beamer.tex  Makefile  Pirinen-2016-abumatran-poster-boaster.tex  Pirinen-2016-iwclul-rbmt-representations.html  Pirinen-2016-iwclul-rbmt-representations.markdown  Pirinen-2016-iwclul-rbmt-representations.tex  Pirinen-2016-smt-morph-segments.tex  UD_tutorial.tex  beamerthemeAbumatranpres.sty  eacl.bib  en-et (1).tmx  en-fi (1).tmx  en-se (1).tmx  et-fi (1).tmx  et-nn (1).tmx  et-se (1).tmx  et-sv (1).tmx  fi-nn (1).tmx  fi-se (1).tmx  fi-sv (1).tmx  iwclul2016.bib  main.tex  nn-se (1).tmx  se-sv (1).tmx  undhr.eng.text  undhr.est.text  undhr.fin.text  undhr.nno.text  undhr.sme.text  undhr.sve.text
2017-finmt/: Makefile  Pirinen-2017-finmt-apefindeu-beamer.tex  beamerthemeHZSK.sty
2017-iwclul/: 2017-iwclul-template.tex  2017-sigur-meeting-beamer.tex  Makefile  iwclul2017.bib  iwclul2017omorfi.bib
2017-nodalida/: Makefile  Pirinen-2017-nodalida-fin-sme-beamer.tex  Pirinen-2017-nodalida-fin-sme.html  Pirinen-2017-nodalida-fin-sme.markdown  Pirinen-2017-nodalida-fin-sme.tex  Pirinen-2017-nodalida-north-sami-finnish.markdown  Pirinen-2017-nodalida-north-sami-finnish.tex  nodalida2017.bib
2018-dgfs-jahrestagung/: 2018-dgfs-apertium-fin-deu-poster.tex  Pirinen-2018-dgfs-apertium-fin-deu.html  (+2 more)
(+397 files in other folders)
